adding solid react blog

--- a/blogs/keys.blog.mdx
+++ b/blogs/keys.blog.mdx
@@ -5,9 +5,12 @@ author: "Vignesh Iyer"
 description: "Embark on a journey through the magical world of React's 'key' prop. Discover how this powerful feature can control component lifecycles and optimize list rendering, bringing clarity and performance to your applications."
 tags: ["React", "key prop", "State Management", "Lists", "Reconciliation"]
 highlightWords: ["key", "reset", "reconciliation"]
+coverImageSrc: "/keys.png"
 ---
 
 # The Magic of 'key': React's Reset and Reconciliation
+
+![Cover Image](/keys.png)
 
 ## Greetings, React Pals!
 
