--- a/blogs/useEffect.blog.mdx
+++ b/blogs/useEffect.blog.mdx
@@ -5,9 +5,12 @@ author: "Vignesh Iyer"
 description: "Join me in a friendly conversation as we demystify the React useEffect hook. We'll explore common misunderstandings, share personal insights, and provide practical examples to transform confusion into clarity."
 tags: ["React", "useEffect", "JavaScript", "Web Development", "Hooks"]
 highlightWords: ["useEffect"]
+coverImageSrc: "/useEffect.png"
 ---
 
 # useEffect: Most Notorious of Them All!
+
+![Cover Image](/useEffect.png)
 
 ## Greetings, Seekers of React Enlightenment!
 
