--- a/blogs/solid-react.blog.mdx
+++ b/blogs/solid-react.blog.mdx
@@ -16,7 +16,7 @@ highlightWords: ["SOLID", "React", "Pokémon"]
 coverImageSrc: "/pokemon.png"
 ---
 
-# "Building a SOLID Pokémon Game in React: A Developer’s Adventure!"
+# Building a SOLID Pokémon Game in React: A Developer’s Adventure!
 
 ![Cover Image](/pokemon.png)
 
